team-app/main/default/objects/Pipeline_Action_Snooze__c/Pipeline_Action_Snooze__c.object-meta.xml
<CustomObject>
    <description>Hides a deal from Today Focus only. Cannot drop a Monday commitment.</description>
    <label>Pipeline Action Snooze</label>
    <pluralLabel>Pipeline Action Snoozes</pluralLabel>
    <nameField>
        <displayFormat>PAS-{000000}</displayFormat>
        <label>Snooze Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>