team-app/main/default/objects/Pipeline_Action_Snooze__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Compound unique key so a re-snooze upserts.</description>
    <inlineHelpText>OpportunityId-UserId. Unique.</inlineHelpText>
    <label>External Id</label>
    <type>Text</type>
    <externalId>true</externalId>
    <length>40</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>