team-app/main/default/objects/Pipeline_Action_Snooze__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>Today-only hide. This Week snapshot is unaffected.</description>
    <inlineHelpText>Snoozed opportunity.</inlineHelpText>
    <label>Opportunity</label>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Pipeline_Action_Snoozes</relationshipName>
    <required>true</required>
</CustomField>