team-app/main/default/objects/Pipeline_Action_Snooze__c/fields/Snooze_Until__c.field-meta.xml
<CustomField>
    <fullName>Snooze_Until__c</fullName>
    <description>Inclusive hide through this date. Next day it returns to Today.</description>
    <inlineHelpText>Reappears the day after this date.</inlineHelpText>
    <label>Snooze Until</label>
    <type>Date</type>
</CustomField>