team-app/main/default/objects/Pipeline_Action_Snooze__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Per-user snooze.</description>
    <inlineHelpText>Who snoozed it.</inlineHelpText>
    <label>User</label>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User</relationshipLabel>
    <relationshipName>Pipeline_Action_Snoozes</relationshipName>
    <required>true</required>
</CustomField>